tests/snapshots/parser_snapshots__parser_all@ast-99.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/05_extensions/extend_generic.of
---
Err(
    "unexpected token ','",
)
