tests/snapshots/parser_snapshots__parser_all@ast.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/01_primitives.of
---
Err(
    "unexpected token comment",
)
